--- a/index.html
+++ b/index.html
@@ -1,115 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>COAJ Madrid - Actividades</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>COAJ Madrid - Portal de Gestión Juvenil</title>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
-  <!-- MODAL DE LOGIN -->
-  <div class="login-modal" id="loginModal">
-    <div class="login-dialog">
-      <div class="login-header">
-        <img src="https://res.cloudinary.com/dstcnsu6a/image/upload/v1764599371/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg.jpg" alt="COAJ Madrid" class="login-logo">
-        <h2>Bienvenido a COAJ Madrid</h2>
-        <p>Accede para ver las actividades</p>
-      </div>
-      
-      <div class="login-body">
-        <button class="btn-invitado" onclick="entrarComoInvitado()">
-          👤 Entrar como Invitado
-        </button>
+  <!-- BACKGROUND -->
+  <div class="animated-bg"></div>
 
-        <div class="login-divider">
-          <span>O</span>
-        </div>
+  <!-- ORBS -->
+  <div class="orb orb-1"></div>
+  <div class="orb orb-2"></div>
+  <div class="orb orb-3"></div>
 
-        <form id="loginForm" onsubmit="iniciarSesion(event)">
-          <div class="form-group">
-            <label>Usuario (Alias)</label>
-            <input type="text" id="alias" placeholder="Ingresa tu usuario" required>
-          </div>
-          
-          <div class="form-group">
-            <label>Contraseña</label>
-            <input type="password" id="contrasena" placeholder="Ingresa tu contraseña" required>
-          </div>
+  <!-- PARTICLES -->
+  <div class="particles" id="particles"></div>
 
-          <div id="loginError" class="login-error" style="display: none;"></div>
-
-          <button type="submit" class="btn-login">
-            🔐 Iniciar Sesión
-          </button>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <header class="header">
-    <div class="header-content">
-      <div class="logo">
-        <div class="logo-icon">
-          <img src="https://res.cloudinary.com/dstcnsu6a/image/upload/v1764599371/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg.jpg" alt="COAJ Madrid">
-        </div>
-        <div class="logo-text">
-          <h1>Actividades COAJ</h1>
-          <p id="fecha"></p>
-        </div>
-      </div>
-      <div class="user-info">
-        <span id="nombreUsuario">Invitado</span>
-        <button class="btn-logout" onclick="cerrarSesion()">Salir</button>
-      </div>
-    </div>
-  </header>
-
+  <!-- MAIN -->
   <div class="container">
-    <div class="view-toggle">
-      <button class="view-btn active" onclick="cambiarVista('tarjetas')">🎴 Ver en Tarjetas</button>
-      <button class="view-btn" onclick="cambiarVista('calendario')">📅 Ver en Calendario</button>
-    </div>
 
-    <div class="filtros-container" id="filtros"></div>
-    <div class="filtros-centros" id="filtrosCentros"></div>
-
-    <div id="loading" class="loading">
-      <div class="spinner"></div>
-      <div class="loading-text">Cargando actividades...</div>
-      <div class="loading-subtext">Espera un momento</div>
-    </div>
-
-    <div id="empty" class="empty" style="display: none;">
-      <div class="empty-icon">🎯</div>
-      <div class="empty-title">No hay actividades</div>
-      <div class="empty-text">No se encontraron actividades para mostrar</div>
-    </div>
-
-    <div id="vistaTarjetas" style="display: block;"></div>
-    <div id="vistaCalendario" style="display: none;"></div>
-  </div>
-
-  <div class="modal" id="modal" onclick="cerrarModal(event)">
-    <div class="modal-dialog" onclick="event.stopPropagation()">
-      <button class="modal-close" onclick="cerrarModal()">✕</button>
-      <div class="modal-body">
-        <img class="modal-header-img" id="modalImg" src="" alt="">
-        <h2 class="modal-title" id="modalTitulo"></h2>
-        <div class="modal-badges" id="modalBadges"></div>
-        <div class="modal-section">
-          <div class="section-title">📝 Descripción</div>
-          <div class="modal-description" id="modalDescripcion"></div>
+    <!-- LOGO -->
+    <div class="logo-section">
+      <div class="logo-container">
+        <div class="logo-glow"></div>
+        <div class="logo">
+          <img src="assets/images/logo-coaj.jpg" alt="COAJ Madrid">
         </div>
-        <div class="modal-section">
-          <div class="section-title">📊 Información</div>
-          <div class="modal-grid" id="modalInfo"></div>
+      </div>
+
+      <h1 class="title">COAJ Madrid</h1>
+      <p class="subtitle">Portal de Gestión Juvenil</p>
+
+      <div class="stats-bar">
+        <div class="stat">
+          <span class="stat-number">9+</span>
+          <span class="stat-label">Centros</span>
+        </div>
+        <div class="stat">
+          <span class="stat-number">200+ Mes</span>
+          <span class="stat-label">Actividades</span>
+        </div>
+        <div class="stat">
+          <span class="stat-number">10,000+</span>
+          <span class="stat-label">Jóvenes</span>
         </div>
       </div>
     </div>
+
+    <!-- WELCOME -->
+    <div class="welcome-section">
+      <h2 class="welcome-title">¡Bienvenido a COAJ Madrid! 🎉</h2>
+      <p class="welcome-text">
+        Somos la red de Centros de Ocio y Asesoramiento Juvenil de Madrid,
+        un espacio donde los jóvenes encuentran apoyo, diversión y oportunidades.
+      </p>
+      <div class="welcome-cta">Elige una opción para comenzar</div>
+    </div>
+
+    <!-- CARDS -->
+    <div class="cards-grid">
+      <a href="pages/eventos.html" class="card">
+        <div class="card-icon">📅</div>
+        <h2 class="card-title">Eventos</h2>
+        <p class="card-description">Explora todos los eventos especiales.</p>
+        <span class="card-arrow">Ver Eventos</span>
+      </a>
+
+      <a href="pages/actividades.html" class="card">
+        <div class="card-icon">🎯</div>
+        <h2 class="card-title">Actividades</h2>
+        <p class="card-description">Descubre las actividades semanales.</p>
+        <span class="card-arrow">Ver Actividades</span>
+      </a>
+
+      <a href="pages/alta-usuarios.html" class="card">
+        <div class="card-icon">👤</div>
+        <h2 class="card-title">Alta de Usuarios</h2>
+        <p class="card-description">Registra nuevos usuarios.</p>
+        <span class="card-arrow">Acceder</span>
+      </a>
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <p>© 2025 COAJ Madrid</p>
+      <p>Desarrollado con ❤️ para la comunidad juvenil</p>
+    </footer>
   </div>
 
-  <script src="app.js"></script>
+  <!-- JS -->
+  <script src="js/app.js"></script>
 </body>
 </html>
