--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="logo-container">
         <div class="logo-glow"></div>
         <div class="logo">
-          <img src="assets/images/logo-coaj.jpg" alt="COAJ Madrid">
+          <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ Madrid">
         </div>
       </div>
 
