--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COAJ Madrid - Portal de Gestión Juvenil</title>
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="css/home.css">
 </head>
-
 <body>
-
   <!-- BACKGROUND -->
   <div class="animated-bg"></div>
-
-  <!-- ORBS -->
   <div class="orb orb-1"></div>
   <div class="orb orb-2"></div>
   <div class="orb orb-3"></div>
-
-  <!-- PARTICLES -->
   <div class="particles" id="particles"></div>
+
+  <!-- HEADER CON AUTH -->
+  <header class="main-header">
+    <div class="header-logo">
+      <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ">
+      <span>COAJ Madrid</span>
+    </div>
+    <div class="header-auth" id="headerAuth">
+      <button class="btn-auth btn-login-header" onclick="abrirModal('login')">Iniciar Sesión</button>
+      <button class="btn-auth btn-registro-header" onclick="abrirModal('registro')">Crear Cuenta</button>
+    </div>
+    <div class="header-user" id="headerUser" style="display:none;">
+      <span id="nombreUsuario"></span>
+      <button class="btn-logout" onclick="cerrarSesion()">Salir</button>
+    </div>
+  </header>
 
   <!-- MAIN -->
   <div class="container">
-
-    <!-- LOGO -->
     <div class="logo-section">
       <div class="logo-container">
         <div class="logo-glow"></div>
@@ -36,68 +40,162 @@
           <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ Madrid">
         </div>
       </div>
-
       <h1 class="title">COAJ Madrid</h1>
       <p class="subtitle">Portal de Gestión Juvenil</p>
-
       <div class="stats-bar">
-        <div class="stat">
-          <span class="stat-number">9+</span>
-          <span class="stat-label">Centros</span>
-        </div>
-        <div class="stat">
-          <span class="stat-number">200+ Mes</span>
-          <span class="stat-label">Actividades</span>
-        </div>
-        <div class="stat">
-          <span class="stat-number">10,000+</span>
-          <span class="stat-label">Jóvenes</span>
-        </div>
+        <div class="stat"><span class="stat-number">9+</span><span class="stat-label">Centros</span></div>
+        <div class="stat"><span class="stat-number">200+</span><span class="stat-label">Actividades</span></div>
+        <div class="stat"><span class="stat-number">10,000+</span><span class="stat-label">Jóvenes</span></div>
       </div>
     </div>
 
-    <!-- WELCOME -->
     <div class="welcome-section">
       <h2 class="welcome-title">¡Bienvenido a COAJ Madrid! 🎉</h2>
-      <p class="welcome-text">
-        Somos la red de Centros de Ocio y Asesoramiento Juvenil de Madrid,
-        un espacio donde los jóvenes encuentran apoyo, diversión y oportunidades.
-      </p>
+      <p class="welcome-text">Somos la red de Centros de Ocio y Asesoramiento Juvenil de Madrid, un espacio donde los jóvenes encuentran apoyo, diversión y oportunidades.</p>
       <div class="welcome-cta">Elige una opción para comenzar</div>
     </div>
 
-    <!-- CARDS -->
     <div class="cards-grid">
       <a href="pages/eventos.html" class="card">
         <div class="card-icon">📅</div>
         <h2 class="card-title">Eventos</h2>
         <p class="card-description">Explora todos los eventos especiales.</p>
-        <span class="card-arrow">Ver Eventos</span>
+        <span class="card-arrow">Ver Eventos →</span>
       </a>
-
       <a href="pages/actividades.html" class="card">
         <div class="card-icon">🎯</div>
         <h2 class="card-title">Actividades</h2>
         <p class="card-description">Descubre las actividades semanales.</p>
-        <span class="card-arrow">Ver Actividades</span>
+        <span class="card-arrow">Ver Actividades →</span>
       </a>
-
       <a href="pages/alta-usuarios.html" class="card">
         <div class="card-icon">👤</div>
         <h2 class="card-title">Alta de Usuarios</h2>
         <p class="card-description">Registra nuevos usuarios.</p>
-        <span class="card-arrow">Acceder</span>
+        <span class="card-arrow">Acceder →</span>
       </a>
     </div>
 
-    <!-- FOOTER -->
     <footer class="footer">
       <p>© 2026 COAJ Madrid</p>
       <p>Desarrollado con ❤️ para la comunidad juvenil</p>
     </footer>
   </div>
 
-  <!-- JS -->
-  <script src="js/app.js"></script>
+  <!-- MODAL AUTH -->
+  <div class="modal-overlay" id="modalAuth" onclick="cerrarModalAuth(event)">
+    <div class="modal-auth" onclick="event.stopPropagation()">
+      <button class="modal-close" onclick="cerrarModalAuth()">✕</button>
+      
+      <!-- TABS -->
+      <div class="auth-tabs">
+        <button class="auth-tab active" id="tabLogin" onclick="cambiarTab('login')">Iniciar Sesión</button>
+        <button class="auth-tab" id="tabRegistro" onclick="cambiarTab('registro')">Crear Cuenta</button>
+      </div>
+
+      <!-- LOGIN FORM -->
+      <form class="auth-form" id="formLogin" onsubmit="hacerLogin(event)">
+        <div class="auth-header">
+          <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ" class="auth-logo">
+          <h2>¡Bienvenido de vuelta!</h2>
+          <p>Ingresa tus credenciales</p>
+        </div>
+        <div class="form-group">
+          <label>Alias</label>
+          <input type="text" id="loginAlias" placeholder="Tu alias de usuario" required>
+        </div>
+        <div class="form-group">
+          <label>Contraseña</label>
+          <input type="password" id="loginPassword" placeholder="Tu contraseña" required>
+        </div>
+        <div class="auth-error" id="loginError"></div>
+        <button type="submit" class="btn-submit" id="btnLogin">Iniciar Sesión</button>
+      </form>
+
+      <!-- REGISTRO FORM -->
+      <form class="auth-form" id="formRegistro" style="display:none;" onsubmit="hacerRegistro(event)">
+        <div class="auth-header">
+          <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ" class="auth-logo">
+          <h2>¡Únete a COAJ!</h2>
+          <p>Crea tu cuenta en segundos</p>
+        </div>
+        
+        <div class="form-row">
+          <div class="form-group">
+            <label>Nombre completo *</label>
+            <input type="text" id="regNombre" placeholder="Nombre y apellidos" required oninput="generarAliasSugerido()">
+          </div>
+          <div class="form-group">
+            <label>Email *</label>
+            <input type="email" id="regEmail" placeholder="tu@email.com" required>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label>Alias *</label>
+            <input type="text" id="regAlias" placeholder="Tu alias único" required>
+            <div class="alias-status" id="aliasStatus"></div>
+          </div>
+          <div class="form-group">
+            <label>Contraseña *</label>
+            <input type="password" id="regPassword" placeholder="Mínimo 6 caracteres" required minlength="6">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label>Fecha nacimiento</label>
+            <input type="date" id="regFecha">
+          </div>
+          <div class="form-group">
+            <label>Sexo</label>
+            <select id="regSexo">
+              <option value="">Selecciona</option>
+              <option value="Hombre">Hombre</option>
+              <option value="Mujer">Mujer</option>
+              <option value="Prefiero no decirlo">Prefiero no decirlo</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label>Móvil</label>
+            <input type="tel" id="regMovil" placeholder="Teléfono">
+          </div>
+          <div class="form-group">
+            <label>Municipio</label>
+            <select id="regMunicipio">
+              <option value="">Selecciona</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label>Distrito</label>
+            <select id="regDistrito" onchange="filtrarBarrios()">
+              <option value="">Selecciona</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Barrio</label>
+            <select id="regBarrio" disabled>
+              <option value="">Primero selecciona distrito</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="auth-error" id="registroError"></div>
+        <button type="submit" class="btn-submit btn-registro" id="btnRegistro">Crear Cuenta</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- TOAST -->
+  <div class="toast" id="toast"></div>
+
+  <script src="js/auth.js"></script>
 </body>
 </html>
