--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>COAJ Madrid - Portal de Gestión Juvenil</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/home.css">
@@ -225,6 +225,55 @@
     </div>
   </footer>
 
+  <!-- BOTTOM NAV (MÓVIL) -->
+  <nav class="bottom-nav" id="bottomNav">
+    <div class="bottom-nav-container">
+      <!-- Sin login -->
+      <div id="bottomNavGuest">
+        <a href="/" class="bottom-nav-item active">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+          <span>Inicio</span>
+        </a>
+        <a href="pages/eventos.html" class="bottom-nav-item">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+          <span>Eventos</span>
+        </a>
+        <a href="pages/actividades.html" class="bottom-nav-item">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="10"/><polygon points="10 8 16 12 10 16 10 8"/></svg>
+          <span>Actividades</span>
+        </a>
+        <button class="bottom-nav-item" onclick="abrirModal('login')">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+          <span>Entrar</span>
+        </button>
+      </div>
+
+      <!-- Con login -->
+      <div id="bottomNavUser" style="display:none;">
+        <a href="/" class="bottom-nav-item active">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+          <span>Inicio</span>
+        </a>
+        <a href="pages/eventos.html" class="bottom-nav-item">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+          <span>Eventos</span>
+        </a>
+        <a href="pages/actividades.html" class="bottom-nav-item">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="10"/><polygon points="10 8 16 12 10 16 10 8"/></svg>
+          <span>Actividades</span>
+        </a>
+        <div class="bottom-nav-user" id="bottomUserInfo">
+          <div class="user-avatar"><span id="bottomUserInitial">U</span></div>
+          <span id="bottomUserName">Usuario</span>
+        </div>
+        <button class="bottom-nav-item" onclick="cerrarSesion()">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
+          <span>Salir</span>
+        </button>
+      </div>
+    </div>
+  </nav>
+
   <!-- MODAL LOGIN/REGISTRO -->
   <div class="modal-overlay" id="modalAuth" onclick="cerrarModalAuth(event)">
     <div class="modal" onclick="event.stopPropagation()">
@@ -235,13 +284,11 @@
         </svg>
       </button>
 
-      <!-- TABS -->
       <div class="modal-tabs">
         <button class="tab active" id="tabLogin" onclick="cambiarTab('login')">Iniciar Sesión</button>
         <button class="tab" id="tabRegistro" onclick="cambiarTab('registro')">Crear Cuenta</button>
       </div>
 
-      <!-- LOGIN -->
       <form class="modal-form" id="formLogin" onsubmit="hacerLogin(event)">
         <div class="modal-header">
           <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ" class="modal-logo">
@@ -278,7 +325,6 @@
         </div>
       </form>
 
-      <!-- REGISTRO -->
       <form class="modal-form" id="formRegistro" style="display:none;" onsubmit="hacerRegistro(event)">
         <div class="modal-header">
           <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ" class="modal-logo">
