--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -13,7 +13,7 @@
   <div class="login-overlay" id="loginModal">
     <div class="login-card">
       <div class="login-header">
-        <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ" class="login-logo">
+        <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1736820087/COAJ/isotipo-coaj.png" alt="COAJ" class="login-logo">
         <h2>Bienvenido a COAJ</h2>
         <p>Accede para explorar actividades</p>
       </div>
@@ -48,7 +48,7 @@
     <header class="app-header">
       <div class="header-left">
         <a href="../index.html" class="header-logo">
-          <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ">
+          <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1736820087/COAJ/isotipo-coaj.png" alt="COAJ">
         </a>
         <div class="header-info">
           <span class="header-greeting" id="headerGreeting">¡Hola!</span>
@@ -56,6 +56,10 @@
         </div>
       </div>
       <div class="header-right">
+        <!-- Theme Toggle -->
+        <button class="theme-toggle" onclick="toggleTheme()" title="Cambiar tema">
+          <span class="material-symbols-outlined" id="themeIcon">dark_mode</span>
+        </button>
         <button class="header-btn" id="btnNotificaciones">
           <span class="material-symbols-outlined">notifications</span>
           <span class="notification-badge">3</span>
@@ -86,6 +90,10 @@
           <span class="material-symbols-outlined">settings</span>
           Configuración
         </a>
+        <button class="user-menu-item" onclick="toggleTheme()">
+          <span class="material-symbols-outlined" id="menuThemeIcon">dark_mode</span>
+          <span id="menuThemeText">Modo Oscuro</span>
+        </button>
         <div class="user-menu-divider"></div>
         <button class="user-menu-item logout" onclick="cerrarSesion()">
           <span class="material-symbols-outlined">logout</span>
@@ -114,7 +122,6 @@
           <button onclick="limpiarFiltros()">Limpiar</button>
         </div>
         <div class="filtros-chips" id="filtrosCategorias"></div>
-        <div class="filtros-chips" id="filtrosCentros"></div>
       </div>
 
       <!-- Loading -->
@@ -124,7 +131,7 @@
       </div>
 
       <!-- Sección: Destacadas -->
-      <section class="section" id="seccionDestacadas">
+      <section class="section hidden" id="seccionDestacadas">
         <div class="section-header">
           <h2>🔥 Destacadas</h2>
           <button class="section-btn">Ver todas</button>
@@ -133,7 +140,7 @@
       </section>
 
       <!-- Sección: Próximamente -->
-      <section class="section" id="seccionProximas">
+      <section class="section hidden" id="seccionProximas">
         <div class="section-header">
           <h2>📅 Próximamente</h2>
           <button class="section-btn">Ver todas</button>
@@ -142,7 +149,7 @@
       </section>
 
       <!-- Sección: Por Categoría -->
-      <section class="section" id="seccionCategorias">
+      <section class="section hidden" id="seccionCategorias">
         <div class="section-header">
           <h2>🎯 Explorar por categoría</h2>
         </div>
@@ -150,7 +157,7 @@
       </section>
 
       <!-- Sección: Todas las Actividades -->
-      <section class="section" id="seccionTodas">
+      <section class="section hidden" id="seccionTodas">
         <div class="section-header">
           <h2>📋 Todas las actividades</h2>
           <div class="view-toggle">
@@ -174,27 +181,53 @@
       </div>
     </main>
 
-    <!-- BOTTOM NAV (Móvil) -->
-    <nav class="bottom-nav">
-      <a href="../index.html" class="nav-item">
-        <span class="material-symbols-outlined">home</span>
-        <span>Inicio</span>
-      </a>
-      <a href="#" class="nav-item active">
-        <span class="material-symbols-outlined">local_activity</span>
-        <span>Actividades</span>
-      </a>
-      <button class="nav-item nav-center" onclick="abrirAsesoria()">
-        <span class="material-symbols-outlined">chat</span>
-      </button>
-      <a href="eventos.html" class="nav-item">
-        <span class="material-symbols-outlined">event</span>
-        <span>Eventos</span>
-      </a>
-      <a href="#" class="nav-item" onclick="toggleUserMenu()">
-        <span class="material-symbols-outlined">person</span>
-        <span>Perfil</span>
-      </a>
+    <!-- BOTTOM NAV - HOMOLOGADO CON INDEX -->
+    <nav class="bottom-nav" id="bottomNav">
+      <div class="bottom-nav-container">
+        <!-- Sin login -->
+        <div id="bottomNavGuest">
+          <a href="../index.html" class="bottom-nav-item">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+            <span>Inicio</span>
+          </a>
+          <a href="../pages/eventos.html" class="bottom-nav-item">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+            <span>Eventos</span>
+          </a>
+          <a href="#" class="bottom-nav-item active">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="10"/><polygon points="10 8 16 12 10 16 10 8"/></svg>
+            <span>Actividades</span>
+          </a>
+          <button class="bottom-nav-item" onclick="mostrarLoginModal()">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+            <span>Entrar</span>
+          </button>
+        </div>
+
+        <!-- Con login -->
+        <div id="bottomNavUser" style="display:none;">
+          <a href="../index.html" class="bottom-nav-item">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+            <span>Inicio</span>
+          </a>
+          <a href="../pages/eventos.html" class="bottom-nav-item">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+            <span>Eventos</span>
+          </a>
+          <a href="#" class="bottom-nav-item active">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="10"/><polygon points="10 8 16 12 10 16 10 8"/></svg>
+            <span>Actividades</span>
+          </a>
+          <div class="bottom-nav-user" onclick="toggleUserMenu()">
+            <div class="header-avatar user-avatar" id="bottomUserAvatar"><span id="bottomAvatarInitial">U</span></div>
+            <span id="bottomUserName">Usuario</span>
+          </div>
+          <button class="bottom-nav-item" onclick="cerrarSesion()">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
+            <span>Salir</span>
+          </button>
+        </div>
+      </div>
     </nav>
   </div>
 
@@ -209,9 +242,7 @@
         <div class="modal-badges" id="modalBadges"></div>
         <h2 class="modal-title" id="modalTitle"></h2>
         <p class="modal-description" id="modalDescription"></p>
-        
         <div class="modal-info-grid" id="modalInfo"></div>
-        
         <div class="modal-actions">
           <button class="btn-secondary" onclick="compartirActividad()">
             <span class="material-symbols-outlined">share</span>
