--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@400" rel="stylesheet">
-  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
   <!-- HEADER -->
   <header class="header">
     <div class="header-inner">
-      <a href="/" class="header-brand">
+      <a href="./index.html" class="header-brand">
         <img src="https://res.cloudinary.com/dkf1xg2mw/image/upload/v1768236309/WhatsApp_Image_2025-11-28_at_9.34.00_AM_kygkkg_bmvdp3.jpg" alt="COAJ Madrid" class="header-logo">
         <div class="header-text">
           <span class="header-greeting">BIENVENIDO</span>
@@ -23,15 +23,15 @@
       </a>
       
       <nav class="desktop-nav" id="headerNav">
-        <a href="pages/eventos.html" class="desktop-nav-item">
+        <a href="./pages/eventos.html" class="desktop-nav-item">
           <span class="material-symbols-outlined">event</span>
           Eventos
         </a>
-        <a href="pages/actividades.html" class="desktop-nav-item">
+        <a href="./pages/actividades.html" class="desktop-nav-item">
           <span class="material-symbols-outlined">play_circle</span>
           Actividades
         </a>
-        <a href="pages/exposiciones.html" class="desktop-nav-item">
+        <a href="./pages/exposiciones.html" class="desktop-nav-item">
           <span class="material-symbols-outlined">photo_library</span>
           Exposiciones
         </a>
@@ -89,11 +89,11 @@
       </p>
 
       <div class="hero-actions">
-        <a href="pages/actividades.html" class="btn-primary btn-lg">
+        <a href="./pages/actividades.html" class="btn-primary btn-lg">
           <span>Explorar Actividades</span>
           <span class="material-symbols-outlined">arrow_forward</span>
         </a>
-        <a href="pages/eventos.html" class="btn-outline btn-lg">Ver Eventos</a>
+        <a href="./pages/eventos.html" class="btn-outline btn-lg">Ver Eventos</a>
       </div>
 
       <div class="hero-stats">
@@ -125,7 +125,7 @@
       </div>
 
       <div class="services-grid">
-        <a href="pages/eventos.html" class="service-card">
+        <a href="./pages/eventos.html" class="service-card">
           <div class="service-icon">
             <span class="material-symbols-outlined">event</span>
           </div>
@@ -137,7 +137,7 @@
           </span>
         </a>
 
-        <a href="pages/actividades.html" class="service-card">
+        <a href="./pages/actividades.html" class="service-card">
           <div class="service-icon">
             <span class="material-symbols-outlined">play_circle</span>
           </div>
@@ -149,7 +149,7 @@
           </span>
         </a>
 
-        <a href="pages/exposiciones.html" class="service-card">
+        <a href="./pages/exposiciones.html" class="service-card">
           <div class="service-icon">
             <span class="material-symbols-outlined">photo_library</span>
           </div>
@@ -161,7 +161,7 @@
           </span>
         </a>
 
-        <a href="pages/alta-usuarios.html" class="service-card">
+        <a href="./pages/alta-usuarios.html" class="service-card">
           <div class="service-icon">
             <span class="material-symbols-outlined">person_add</span>
           </div>
@@ -199,9 +199,9 @@
           <p>Red de Centros de Ocio y Asesoramiento Juvenil de Madrid.</p>
         </div>
         <div class="footer-links">
-          <a href="pages/eventos.html">Eventos</a>
-          <a href="pages/actividades.html">Actividades</a>
-          <a href="pages/exposiciones.html">Exposiciones</a>
+          <a href="./pages/eventos.html">Eventos</a>
+          <a href="./pages/actividades.html">Actividades</a>
+          <a href="./pages/exposiciones.html">Exposiciones</a>
         </div>
       </div>
       <div class="footer-bottom">
@@ -214,15 +214,15 @@
   <nav class="bottom-nav" id="bottomNav">
     <!-- Sin login -->
     <div id="bottomNavGuest" class="nav-items">
-      <a href="/" class="nav-item active">
+      <a href="./index.html" class="nav-item active">
         <span class="material-symbols-outlined">home</span>
         <span>Inicio</span>
       </a>
-      <a href="pages/actividades.html" class="nav-item">
+      <a href="./pages/actividades.html" class="nav-item">
         <span class="material-symbols-outlined">play_circle</span>
         <span>Actividades</span>
       </a>
-      <a href="pages/eventos.html" class="nav-item">
+      <a href="./pages/eventos.html" class="nav-item">
         <span class="material-symbols-outlined">event</span>
         <span>Eventos</span>
       </a>
@@ -234,15 +234,15 @@
 
     <!-- Con login -->
     <div id="bottomNavUser" class="nav-items" style="display:none;">
-      <a href="/" class="nav-item active">
+      <a href="./index.html" class="nav-item active">
         <span class="material-symbols-outlined">home</span>
         <span>Inicio</span>
       </a>
-      <a href="pages/actividades.html" class="nav-item">
+      <a href="./pages/actividades.html" class="nav-item">
         <span class="material-symbols-outlined">play_circle</span>
         <span>Actividades</span>
       </a>
-      <a href="pages/eventos.html" class="nav-item">
+      <a href="./pages/eventos.html" class="nav-item">
         <span class="material-symbols-outlined">event</span>
         <span>Eventos</span>
       </a>
@@ -399,6 +399,6 @@
     <span id="toastMessage">Mensaje</span>
   </div>
 
-  <script src="js/auth.js"></script>
+  <script src="./js/auth.js"></script>
 </body>
 </html>
