--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -81,6 +81,10 @@
             <span class="material-symbols-outlined">event</span>
             Eventos
           </a>
+          <a href="exposiciones.html" class="desktop-nav-item">
+            <span class="material-symbols-outlined">museum</span>
+            Exposiciones
+          </a>
         </nav>
         
         <div class="header-actions">
@@ -235,6 +239,10 @@
           <span class="material-symbols-outlined">event</span>
           <span>Eventos</span>
         </a>
+        <a href="exposiciones.html" class="nav-item">
+          <span class="material-symbols-outlined">museum</span>
+          <span>Expos</span>
+        </a>
         <button class="nav-item" onclick="mostrarLoginModal()">
           <span class="material-symbols-outlined">login</span>
           <span>Entrar</span>
@@ -254,6 +262,10 @@
         <a href="eventos.html" class="nav-item">
           <span class="material-symbols-outlined">event</span>
           <span>Eventos</span>
+        </a>
+        <a href="exposiciones.html" class="nav-item">
+          <span class="material-symbols-outlined">museum</span>
+          <span>Expos</span>
         </a>
         <button class="nav-item" onclick="cerrarSesion()">
           <span class="material-symbols-outlined">logout</span>
