--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -81,6 +81,10 @@
             <span class="material-symbols-outlined">event</span>
             Eventos
           </a>
+          <a href="exposiciones.html" class="desktop-nav-item">
+            <span class="material-symbols-outlined">museum</span>
+            Exposiciones
+          </a>
         </nav>
         
         <div class="header-actions">
@@ -246,6 +250,10 @@
           <span class="material-symbols-outlined">event</span>
           <span>Eventos</span>
         </a>
+        <a href="exposiciones.html" class="nav-item">
+          <span class="material-symbols-outlined">museum</span>
+          <span>Expos</span>
+        </a>
         <button class="nav-item" onclick="mostrarLoginModal()">
           <span class="material-symbols-outlined">login</span>
           <span>Entrar</span>
@@ -265,6 +273,10 @@
         <a href="#" class="nav-item active">
           <span class="material-symbols-outlined">event</span>
           <span>Eventos</span>
+        </a>
+        <a href="exposiciones.html" class="nav-item">
+          <span class="material-symbols-outlined">museum</span>
+          <span>Expos</span>
         </a>
         <button class="nav-item" onclick="cerrarSesion()">
           <span class="material-symbols-outlined">logout</span>
