--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       </a>
       
       <nav class="desktop-nav" id="headerNav">
-        <a href="./pages/eventos.html" class="desktop-nav-item">
-          <span class="material-symbols-outlined">event</span>
-          Eventos
-        </a>
         <a href="./pages/actividades.html" class="desktop-nav-item">
           <span class="material-symbols-outlined">play_circle</span>
           Actividades
         </a>
+        <a href="./pages/eventos.html" class="desktop-nav-item">
+          <span class="material-symbols-outlined">event</span>
+          Eventos
+        </a>
         <a href="./pages/exposiciones.html" class="desktop-nav-item">
-          <span class="material-symbols-outlined">photo_library</span>
+          <span class="material-symbols-outlined">museum</span>
           Exposiciones
         </a>
       </nav>
@@ -125,18 +125,6 @@
       </div>
 
       <div class="services-grid">
-        <a href="./pages/eventos.html" class="service-card">
-          <div class="service-icon">
-            <span class="material-symbols-outlined">event</span>
-          </div>
-          <h3>Eventos</h3>
-          <p>Fiestas, festivales, conciertos y eventos especiales durante todo el año.</p>
-          <span class="service-link">
-            Ver eventos
-            <span class="material-symbols-outlined">arrow_forward</span>
-          </span>
-        </a>
-
         <a href="./pages/actividades.html" class="service-card">
           <div class="service-icon">
             <span class="material-symbols-outlined">play_circle</span>
@@ -149,9 +137,21 @@
           </span>
         </a>
 
+        <a href="./pages/eventos.html" class="service-card">
+          <div class="service-icon">
+            <span class="material-symbols-outlined">event</span>
+          </div>
+          <h3>Eventos</h3>
+          <p>Fiestas, festivales, conciertos y eventos especiales durante todo el año.</p>
+          <span class="service-link">
+            Ver eventos
+            <span class="material-symbols-outlined">arrow_forward</span>
+          </span>
+        </a>
+
         <a href="./pages/exposiciones.html" class="service-card">
           <div class="service-icon">
-            <span class="material-symbols-outlined">photo_library</span>
+            <span class="material-symbols-outlined">museum</span>
           </div>
           <h3>Exposiciones</h3>
           <p>Muestras artísticas y culturales de jóvenes talentos madrileños.</p>
@@ -199,8 +199,8 @@
           <p>Red de Centros de Ocio y Asesoramiento Juvenil de Madrid.</p>
         </div>
         <div class="footer-links">
-          <a href="./pages/eventos.html">Eventos</a>
           <a href="./pages/actividades.html">Actividades</a>
+          <a href="./pages/eventos.html">Eventos</a>
           <a href="./pages/exposiciones.html">Exposiciones</a>
         </div>
       </div>
@@ -226,6 +226,10 @@
         <span class="material-symbols-outlined">event</span>
         <span>Eventos</span>
       </a>
+      <a href="./pages/exposiciones.html" class="nav-item">
+        <span class="material-symbols-outlined">museum</span>
+        <span>Expos</span>
+      </a>
       <button class="nav-item" onclick="abrirModal('login')">
         <span class="material-symbols-outlined">login</span>
         <span>Entrar</span>
@@ -245,6 +249,10 @@
       <a href="./pages/eventos.html" class="nav-item">
         <span class="material-symbols-outlined">event</span>
         <span>Eventos</span>
+      </a>
+      <a href="./pages/exposiciones.html" class="nav-item">
+        <span class="material-symbols-outlined">museum</span>
+        <span>Expos</span>
       </a>
       <button class="nav-item" onclick="cerrarSesion()">
         <span class="material-symbols-outlined">logout</span>
