--- a/index.html
+++ b/index.html
@@ -385,6 +385,15 @@
               </select>
             </div>
           </div>
+
+          <div class="form-row">
+            <div class="form-group" style="grid-column: 1 / -1;">
+              <label for="regCentro">Centro Juvenil</label>
+              <select id="regCentro">
+                <option value="">Selecciona tu centro</option>
+              </select>
+            </div>
+          </div>
         </div>
 
         <div class="form-error" id="registroError"></div>
