--- a/index.html
+++ b/index.html
@@ -344,12 +344,12 @@
 
           <div class="form-row">
             <div class="form-group">
-              <label for="regFecha">Fecha de nacimiento</label>
-              <input type="date" id="regFecha">
+              <label for="regFecha">Fecha de nacimiento *</label>
+              <input type="date" id="regFecha" required>
             </div>
             <div class="form-group">
-              <label for="regSexo">Sexo</label>
-              <select id="regSexo">
+              <label for="regSexo">Sexo *</label>
+              <select id="regSexo" required>
                 <option value="">Selecciona</option>
                 <option value="Hombre">Hombre</option>
                 <option value="Mujer">Mujer</option>
@@ -364,8 +364,8 @@
               <input type="tel" id="regMovil" placeholder="612 345 678">
             </div>
             <div class="form-group">
-              <label for="regMunicipio">Municipio</label>
-              <select id="regMunicipio">
+              <label for="regMunicipio">Municipio *</label>
+              <select id="regMunicipio" required>
                 <option value="">Selecciona</option>
               </select>
             </div>
@@ -388,8 +388,8 @@
 
           <div class="form-row">
             <div class="form-group" style="grid-column: 1 / -1;">
-              <label for="regCentro">Centro Juvenil</label>
-              <select id="regCentro">
+              <label for="regCentro">Centro Juvenil *</label>
+              <select id="regCentro" required>
                 <option value="">Selecciona tu centro</option>
               </select>
             </div>
