--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <div class="form-row">
             <div class="form-group">
               <label for="regAlias">Alias *</label>
-              <input type="text" id="regAlias" placeholder="Tu usuario único" required>
+          <input type="text" id="regAlias" placeholder="Se genera automático" required readonly>
               <span class="input-hint" id="aliasStatus"></span>
             </div>
             <div class="form-group">
