--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </span>
         </a>
 
-        <a href="./pages/alta-usuarios.html" class="service-card">
+ <a href="javascript:void(0)" class="service-card" onclick="abrirModal('registro')">
           <div class="service-icon">
             <span class="material-symbols-outlined">person_add</span>
           </div>
