--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
           <span class="material-symbols-outlined">play_circle</span>
           Actividades
         </a>
+        <a href="./pages/espacios.html" class="desktop-nav-item">
+          <span class="material-symbols-outlined">meeting_room</span>
+          Espacios
+        </a>
         <a href="./pages/eventos.html" class="desktop-nav-item">
           <span class="material-symbols-outlined">event</span>
           Eventos
@@ -385,6 +389,18 @@
           </span>
         </a>
 
+        <a href="./pages/espacios.html" class="service-card">
+          <div class="service-icon">
+            <span class="material-symbols-outlined">meeting_room</span>
+          </div>
+          <h3>Espacios y Reservas</h3>
+          <p>Reserva salas de estudio, ensayo, música y ocio en nuestros 9 centros.</p>
+          <span class="service-link">
+            Ver espacios
+            <span class="material-symbols-outlined">arrow_forward</span>
+          </span>
+        </a>
+
         <a href="./pages/eventos.html" class="service-card">
           <div class="service-icon">
             <span class="material-symbols-outlined">event</span>
@@ -453,6 +469,7 @@
         </div>
         <div class="footer-links">
           <a href="./pages/actividades.html">Actividades</a>
+          <a href="./pages/espacios.html">Espacios</a>
           <a href="./pages/eventos.html">Eventos</a>
           <a href="./pages/exposiciones.html">Exposiciones</a>
         </div>
@@ -474,13 +491,13 @@
         <span class="material-symbols-outlined">play_circle</span>
         <span>Actividades</span>
       </a>
+      <a href="./pages/espacios.html" class="nav-item">
+        <span class="material-symbols-outlined">meeting_room</span>
+        <span>Espacios</span>
+      </a>
       <a href="./pages/eventos.html" class="nav-item">
         <span class="material-symbols-outlined">event</span>
         <span>Eventos</span>
-      </a>
-      <a href="./pages/exposiciones.html" class="nav-item">
-        <span class="material-symbols-outlined">museum</span>
-        <span>Expos</span>
       </a>
       <button class="nav-item" onclick="abrirModal('login')">
         <span class="material-symbols-outlined">login</span>
@@ -497,13 +514,13 @@
         <span class="material-symbols-outlined">play_circle</span>
         <span>Actividades</span>
       </a>
+      <a href="./pages/espacios.html" class="nav-item">
+        <span class="material-symbols-outlined">meeting_room</span>
+        <span>Espacios</span>
+      </a>
       <a href="./pages/eventos.html" class="nav-item">
         <span class="material-symbols-outlined">event</span>
         <span>Eventos</span>
-      </a>
-      <a href="./pages/exposiciones.html" class="nav-item">
-        <span class="material-symbols-outlined">museum</span>
-        <span>Expos</span>
       </a>
       <button class="nav-item" onclick="cerrarSesion()">
         <span class="material-symbols-outlined">logout</span>
