--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -77,6 +77,10 @@
             <span class="material-symbols-outlined">play_circle</span>
             Actividades
           </a>
+          <a href="espacios.html" class="desktop-nav-item">
+            <span class="material-symbols-outlined">meeting_room</span>
+            Espacios
+          </a>
           <a href="eventos.html" class="desktop-nav-item">
             <span class="material-symbols-outlined">event</span>
             Eventos
@@ -235,13 +239,13 @@
           <span class="material-symbols-outlined">play_circle</span>
           <span>Actividades</span>
         </a>
+        <a href="espacios.html" class="nav-item">
+          <span class="material-symbols-outlined">meeting_room</span>
+          <span>Espacios</span>
+        </a>
         <a href="eventos.html" class="nav-item">
           <span class="material-symbols-outlined">event</span>
           <span>Eventos</span>
-        </a>
-        <a href="exposiciones.html" class="nav-item">
-          <span class="material-symbols-outlined">museum</span>
-          <span>Expos</span>
         </a>
         <button class="nav-item" onclick="mostrarLoginModal()">
           <span class="material-symbols-outlined">login</span>
@@ -259,13 +263,13 @@
           <span class="material-symbols-outlined">play_circle</span>
           <span>Actividades</span>
         </a>
+        <a href="espacios.html" class="nav-item">
+          <span class="material-symbols-outlined">meeting_room</span>
+          <span>Espacios</span>
+        </a>
         <a href="eventos.html" class="nav-item">
           <span class="material-symbols-outlined">event</span>
           <span>Eventos</span>
-        </a>
-        <a href="exposiciones.html" class="nav-item">
-          <span class="material-symbols-outlined">museum</span>
-          <span>Expos</span>
         </a>
         <button class="nav-item" onclick="cerrarSesion()">
           <span class="material-symbols-outlined">logout</span>
