--- a/pages/espacios.html
+++ b/pages/espacios.html
@@ -81,6 +81,9 @@
           <a href="eventos.html" class="desktop-nav-item">
             <span class="material-symbols-outlined">event</span> Eventos
           </a>
+          <a href="exposiciones.html" class="desktop-nav-item">
+            <span class="material-symbols-outlined">museum</span> Exposiciones
+          </a>
         </nav>
 
         <div class="header-actions">
